added map, updated backend with enhancements

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ ultralytics>=8.0.0
 torch>=2.0.0
 torchvision>=0.15.0
 anduril-lattice-sdk>=1.0.0
+opencv-python>=4.8.0
+pyyaml>=6.0.1
+sqlalchemy>=2.0.0
+aiosqlite>=0.19.0
+websockets>=12.0
+filterpy>=1.4.5
+greenlet>=3.0.0
