--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,7 @@ detection:
 
 # Performance settings
 performance:
-  batch_size: 240  # Number of feeds per batch
+  batch_size: 50  # Number of feeds per batch (reduced from 240 to avoid overwhelming servers)
   worker_threads: 8  # ThreadPoolExecutor workers
   selective_skip_interval: 2  # Re-check empty feeds every N cycles
 
@@ -32,8 +32,8 @@ performance:
     max_connections: 300
     max_keepalive: 250
     keepalive_expiry: 60  # seconds
-    timeout: 5.0
-    connect_timeout: 2.0
+    timeout: 15.0  # Increased from 5.0 to 15.0 seconds
+    connect_timeout: 5.0  # Increased from 2.0 to 5.0 seconds
 
 # Video recording
 recording:
