--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ aiosqlite>=0.19.0
 websockets>=12.0
 filterpy>=1.4.5
 greenlet>=3.0.0
+
+# Observability dependencies
+prometheus-client>=0.19.0
+psutil>=5.9.0
